@@ -51,7 +51,6 @@ import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -364,7 +363,7 @@ public class JmsConnectorsTest {
                               .withHeader(JmsTimeToLive.create(999, TimeUnit.SECONDS))
                               .withHeader(JmsPriority.create(2))
                               .withHeader(JmsDeliveryMode.create(DeliveryMode.NON_PERSISTENT)))
-                  .collect(Collectors.toList());
+                  .toList();
           // #create-messages-with-headers
 
           Source.from(msgsIn).runWith(jmsSink, system);
@@ -465,9 +464,7 @@ public class JmsConnectorsTest {
           // #source-with-selector
 
           List<JmsTextMessage> oddMsgsIn =
-              msgsIn.stream()
-                  .filter(msg -> Integer.valueOf(msg.body()) % 2 == 1)
-                  .collect(Collectors.toList());
+              msgsIn.stream().filter(msg -> Integer.valueOf(msg.body()) % 2 == 1).toList();
           assertEquals(5, oddMsgsIn.size());
 
           CompletionStage<List<Message>> result =
@@ -498,8 +495,7 @@ public class JmsConnectorsTest {
           ConnectionFactory connectionFactory = server.createConnectionFactory();
 
           List<String> in = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k");
-          List<String> inNumbers =
-              IntStream.range(0, 10).boxed().map(String::valueOf).collect(Collectors.toList());
+          List<String> inNumbers = IntStream.range(0, 10).boxed().map(String::valueOf).toList();
 
           Sink<String, CompletionStage<Done>> jmsTopicSink =
               JmsProducer.textSink(
@@ -521,13 +517,13 @@ public class JmsConnectorsTest {
               jmsTopicSource
                   .take(in.size() + inNumbers.size())
                   .runWith(Sink.seq(), system)
-                  .thenApply(l -> l.stream().sorted().collect(Collectors.toList()));
+                  .thenApply(l -> l.stream().sorted().toList());
 
           CompletionStage<List<String>> result2 =
               jmsTopicSource2
                   .take(in.size() + inNumbers.size())
                   .runWith(Sink.seq(), system)
-                  .thenApply(l -> l.stream().sorted().collect(Collectors.toList()));
+                  .thenApply(l -> l.stream().sorted().toList());
 
           Thread.sleep(500);
 
@@ -535,10 +531,10 @@ public class JmsConnectorsTest {
           Source.from(inNumbers).runWith(jmsTopicSink2, system);
 
           assertEquals(
-              Stream.concat(in.stream(), inNumbers.stream()).sorted().collect(Collectors.toList()),
+              Stream.concat(in.stream(), inNumbers.stream()).sorted().toList(),
               result.toCompletableFuture().get(5, TimeUnit.SECONDS));
           assertEquals(
-              Stream.concat(in.stream(), inNumbers.stream()).sorted().collect(Collectors.toList()),
+              Stream.concat(in.stream(), inNumbers.stream()).sorted().toList(),
               result2.toCompletableFuture().get(5, TimeUnit.SECONDS));
         });
   }
@@ -673,7 +669,7 @@ public class JmsConnectorsTest {
                           throw new RuntimeException(e);
                         }
                       })
-                  .collect(Collectors.toList());
+                  .toList();
 
           assertEquals(in, resultText);
         });
