@@ -22,7 +22,6 @@ import org.apache.pekko.stream.javadsl.Source;
 import java.sql.PreparedStatement;
 import java.util.List;
 import java.util.concurrent.CompletionStage;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class DocSnippetSink {
@@ -33,10 +32,7 @@ public class DocSnippetSink {
     system.registerOnTermination(session::close);
 
     final List<User> users =
-        IntStream.range(0, 42)
-            .boxed()
-            .map((i) -> new User(i, "Name" + i))
-            .collect(Collectors.toList());
+        IntStream.range(0, 42).boxed().map((i) -> new User(i, "Name" + i)).toList();
 
     // #sink-example
     final CompletionStage<Done> done =
